fix for the overflowing heads

--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -139,8 +139,8 @@
 }
 
 .person-image-large {
-  width: 200px;
-  height: 200px;
+  width: 120px;
+  height: 120px;
   @include border-radius( 50% );
   &.offset0 {
     margin-bottom: 65px;
@@ -148,8 +148,8 @@
 }
 
 .person-image {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   @include border-radius( 50% );
   &.offset0 {
     margin-bottom: 65px;
@@ -160,7 +160,7 @@
   @extend .person-image;
   width: 70px;
   height: 70px;
-  margin-right: -10px;
+  margin-right: -15px;
   margin-bottom: 25px;
   &.offset0 {
     margin-bottom: 75px;
